syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.demo.grpc";

service SimpleService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloReply {
  string greeting = 1;
}